# bin

./: .gitignore  Cargo.toml  README.md  arr_intersect  arr_subtract  bs  cb  cbtd  cg  cl  cmt  ctp  dist-workspace.toml  dot_env  fail  go_build  go_deploy  go_update  install_bin.sh  is_dirty  is_on_branch  pass  pause  pkgs_on_branch  pwb  repo  subtract_file_contents  tags.json  tkt  tm  tmuxify  ugo  vcb  vcs  warp_to_all  x
.github/workflows/: release.yml  smoke-test-install.yml
crates/add_cmd_tag/: Cargo.toml
crates/add_cmd_tag/src/: main.rs
crates/arr-intersect/: Cargo.toml
crates/arr-intersect/src/: main.rs
crates/arr-subtract/: Cargo.toml
crates/arr-subtract/src/: main.rs
crates/auto-archive/: Cargo.toml
crates/auto-archive/src/: main.rs
crates/bin-lib/: Cargo.toml
crates/bin-lib/src/: branch.rs  fmt.rs  git.rs  lib.rs  menu.rs  sets.rs  tags.rs  ticket.rs
crates/bs/: Cargo.toml
crates/bs/src/: main.rs
crates/cb/: Cargo.toml
crates/cb/src/: main.rs
crates/cmt/: Cargo.toml
crates/cmt/src/: main.rs
crates/cronx/: Cargo.toml
crates/cronx/src/: main.rs
crates/disable_cmds_by_tag/: Cargo.toml
crates/disable_cmds_by_tag/src/: main.rs
crates/dot_env/: Cargo.toml
crates/dot_env/src/: main.rs
crates/dot_env/tests/: integration.rs
crates/enable_cmds_by_tag/: Cargo.toml
crates/enable_cmds_by_tag/src/: main.rs
crates/fail/: Cargo.toml
crates/fail/src/: main.rs
crates/is-dirty/: Cargo.toml
crates/is-dirty/src/: main.rs
crates/is-on-branch/: Cargo.toml
crates/is-on-branch/src/: main.rs
crates/list_cmd_tags/: Cargo.toml
crates/list_cmd_tags/src/: main.rs
crates/multiselect/: Cargo.toml
crates/multiselect/examples/: groups.rs
crates/multiselect/src/: lib.rs  main.rs  model.rs  tui.rs
crates/multiselect/tests/: stdout_clean.rs
crates/pass/: Cargo.toml
crates/pass/src/: main.rs
crates/pwb/: Cargo.toml
crates/pwb/src/: main.rs
crates/rm_cmd_tag/: Cargo.toml
crates/rm_cmd_tag/src/: main.rs
crates/skill-review-mailer/: Cargo.toml
crates/skill-review-mailer/src/: main.rs
crates/tkt/: Cargo.toml
crates/tkt/src/: main.rs
crates/x/: Cargo.toml
crates/x/src/: main.rs
crates/x/tests/: integration.rs
resources/: dependency_tree.txt
scripts/: install.sh
