[workspace]
members = ["crates/arr-intersect", "crates/arr-subtract", "crates/bin-lib", "crates/bs", "crates/cb", "crates/cmt", "crates/dot_env", "crates/fail", "crates/is-dirty", "crates/is-on-branch", "crates/multiselect", "crates/pass", "crates/pwb", "crates/skill-review-mailer", "crates/x"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/12yanogden/bin"

[workspace.dependencies]
bin-lib = { path = "crates/bin-lib" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
git2 = "0.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-executor = { git = "ssh://git@github.com/Artemis-Cooperative/shell-executor.git", tag = "v0.2.2" }

[profile.dist]
inherits = "release"
lto = "thin"
