[workspace]
members = ["crates/arr-intersect", "crates/arr-subtract", "crates/bin-lib", "crates/bs", "crates/cb", "crates/cmt", "crates/dot_env", "crates/fail", "crates/is-dirty", "crates/is-on-branch", "crates/multiselect", "crates/pass", "crates/pwb", "crates/x"]
resolver = "2"

[workspace.package]
version = "1.0.2"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/12yanogden/bin"

[workspace.dependencies]
bin-lib = { path = "crates/bin-lib" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
git2 = "0.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-executor = { git = "https://github.com/Artemis-Cooperative/shell-executor.git", branch = "main" }
multiselect-cli = { git = "https://github.com/Artemis-Cooperative/multiselect-cli.git", branch = "main" }

[profile.dist]
inherits = "release"
lto = "thin"
