[workspace]
members = ["crates/arr-intersect", "crates/arr-subtract", "crates/auto-archive", "crates/bin-lib", "crates/bs", "crates/cb", "crates/cmt", "crates/cronx", "crates/dot_env", "crates/fail", "crates/is-dirty", "crates/is-on-branch", "crates/multiselect", "crates/pass", "crates/pwb", "crates/x"]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/12yanogden/bin"

[workspace.dependencies]
bin-lib = { path = "crates/bin-lib" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
git2 = "0.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-executor = { git = "https://github.com/Artemis-Cooperative/shell-executor.git", branch = "main" }
multiselect-cli = { git = "https://github.com/Artemis-Cooperative/multiselect-cli.git", branch = "main" }
auto-archive-upstream = { git = "https://github.com/12yanogden/auto-archive.git", tag = "v0.1.0", package = "auto-archive" }
cronx-upstream = { git = "https://github.com/12yanogden/cronx.git", tag = "v0.1.1", package = "cronx" }

[profile.dist]
inherits = "release"
lto = "thin"
