[package]
name = "skill-review-mailer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
dotenvy = "0.15"
imap = "2"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
native-tls = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
